fix context usage (#166)
* fix context usage

* fix not found response

* remove the whitespace